--- a/luska.html
+++ b/luska.html
@@ -13,7 +13,7 @@
 
 </head>
 <body><div>
-<a href="home.html"><button type="button" class="btn btn-info">Назад</button></a>
+<a href="index.html"><button type="button" class="btn btn-info">Назад</button></a>
 </div>
 <h1>Луси</h1>
 
