--- a/mm.html
+++ b/mm.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-<a href="home.html"><button type="button" class="btn btn-danger">Назад</button></a>
+<a href="index.html"><button type="button" class="btn btn-danger">Назад</button></a>
 <h1>Мико и Матиј</h1>
 
 
